--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <section id="pricing" class="pricing">
 
     <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <p>Simple and affordable price plans for you and your dog.</p>
     <div class="row">
       <div class="pricing-col col-lg-4 col-md-6">
         <div class="card">
